--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2 class="subhead">You&rsquo;re Right.</h2>
         </div>
         <div class="col-md-4">
-            
+            something
         </div>
     </div>
     <!-- Page Content -->
