Add latest updates

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>LETRS (Language Essentials for Teachers of Reading and Spelling)</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://storage.pardot.com/207592/23761/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/styles.css" rel="stylesheet">
@@ -44,8 +45,6 @@
         .vidwrap {
             border: solid 3px #f1b61a;
         }
-
-
 
         .vidwrap h2 {
             text-transform: none;
@@ -85,23 +84,22 @@
         </div>
     </header>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-2">
             <div class="orange-arrow"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-10">
             <h2 class="subhead">You&rsquo;re Right.</h2>
         </div>
-        <div class="col-md-4">
-            something
+        <div class="col-md-4 hidden-xs">
         </div>
     </div>
     <!-- Page Content -->
     <div class="container" style="background: #fff;">
 
         <div class="row">
-            <div pardot-region="left-top" class="col-md-7 left-col" style="background-color: #fefefe; padding-bottom:50px;">
+            <div pardot-region="left-top" class="col-md-7" id="col-main">
                 <div class="eff-inno-flex">
-                    <h2 style="font-size:24px">Proven professional development for<br>teachers of language and literacy</h2>
+                    <h2>Proven professional development for<br>teachers of language and literacy</h2>
                     <p>Research shows 95% of all first graders can be taught how to read. The harsh reality is that
                         approximately 31% of fourth graders cannot read at even “basic” levels. Of those who cannot,
                         most won’t read without proper instruction. </p>
@@ -111,8 +109,14 @@
                         <em>LETRS</em> is the most respected comprehensive professional development course for
                         instructors of reading, spelling, and related language skills.
                     </p>
+                    <button type="button" class="btn btn-success btn-lg center-block margin-top-30">Call To Action
+                        Button</button>
+                    <div class="row">
+                        <div class="col-md-6 col-xs-12">left side</div>
+                        <div class="col-md-6 col-xs-12">right side</div>
+                    </div>
                     <h3><em>LETRS:</em></h3>
-                    <ul style="font-size:18px; line-height:26px; color:#243a79; padding-top: 35px; padding-left: 25px; padding-right: 25px; padding-bottom: 10px;">
+                    <ul>
                         <li>Provides educators with an in-depth understanding of the science behind teaching literacy</li>
                         <li>Guides teachers through classroom application of new concepts</li>
                         <li>Includes engaging videos that show teachers demonstrating effective instruction</li>
@@ -132,10 +136,8 @@
                     </h3>
                     <script src="https://fast.wistia.com/embed/medias/cp50xqktct.jsonp" async></script>
                     <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
-                    <span class="wistia_embed wistia_async_cp50xqktct popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:338px;width:600px">&nbsp;</span>
-                    <div class="row">
-
-                    </div>
+                    <img src="http://via.placeholder.com/600x350?text=video+placeholder" class="img-responsive" alt="">
+                    <!-- <span class="wistia_embed wistia_async_cp50xqktct popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:338px;width:600px">&nbsp;</span> -->
                 </div>
 
             </div>
@@ -167,13 +169,14 @@
             <div class="row col-sm-12">
                 <div class="container">
                     <div pardot-region="footer" class="col-lg-12">
-                        <p>&copy; 2018 Voyager Sopris Learning, Inc. All Rights Reserved</p>
+                        <p>&copy; 2019 Voyager Sopris Learning, Inc. All Rights Reserved</p>
                     </div>
                 </div>
             </div>
             <!-- /.row -->
         </footer>
     </section>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <!-- /.container -->
 
