Add latest edits for client review

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </section>
     <!-- Image Background Page Header -->
     <header>
-        <div class="container" style="padding-bottom: 80px;">
+        <div class="container banner-content">
             <div class="row">
                 <div pardot-region="banner-title" class="col-md-4 col-sm-6 col-xs-12">
                     <h1>Ever get the feeling your PD is <span class="missing">missing</span> something?</h1>
@@ -91,6 +91,7 @@
             <h2 class="subhead">You&rsquo;re Right.</h2>
         </div>
         <div class="col-md-4 hidden-xs">
+            <!-- Empty column to center above content. Hides on mobile. -->
         </div>
     </div>
     <!-- Page Content -->
@@ -104,16 +105,20 @@
                         approximately 31% of fourth graders cannot read at even “basic” levels. Of those who cannot,
                         most won’t read without proper instruction. </p>
 
-                    <p>Students need teachers who know how to teach the foundational skills of reading. Designed to be
+                    <p class="margin-bottom-30">Students need teachers who know how to teach the foundational skills of reading. Designed to be
                         the cornerstone of a multiyear, systemic literacy improvement initiative,
                         <em>LETRS</em> is the most respected comprehensive professional development course for
                         instructors of reading, spelling, and related language skills.
                     </p>
-                    <button type="button" class="btn btn-success btn-lg center-block margin-top-30">Call To Action
-                        Button</button>
+
                     <div class="row">
-                        <div class="col-md-6 col-xs-12">left side</div>
-                        <div class="col-md-6 col-xs-12">right side</div>
+                        <div class="col-md-4 col-xs-12"><img src="img/letrs_white_paper_2018_web-1.png" width="195"
+                                height="248" class="img-responsive" alt=""></div>
+                        <div class="col-md-8 col-xs-12">
+                            <h3><em>LETRS</em> whitepaper heading</h3>
+                            <p>Lorem enibh modipsu essit utatum, consequam nulput im. Ese elis fermentum molestie nullam modionsed eugiat mincidunt inciduipit.</p>
+                            <button type="button" class="btn btn-success btn-lg margin-top-30 margin-bottom-30">Call To Action</button>
+                        </div>
                     </div>
                     <h3><em>LETRS:</em></h3>
                     <ul>
