Add latest revisions

--- a/index.html
+++ b/index.html
@@ -105,21 +105,26 @@
                         approximately 31% of fourth graders cannot read at even “basic” levels. Of those who cannot,
                         most won’t read without proper instruction. </p>
 
-                    <p class="margin-bottom-30">Students need teachers who know how to teach the foundational skills of reading. Designed to be
+                    <p class="margin-bottom-30">Students need teachers who know how to teach the foundational skills of
+                        reading. Designed to be
                         the cornerstone of a multiyear, systemic literacy improvement initiative,
                         <em>LETRS</em> is the most respected comprehensive professional development course for
                         instructors of reading, spelling, and related language skills.
                     </p>
+                    <hr>
 
                     <div class="row">
                         <div class="col-md-4 col-xs-12"><img src="img/letrs_white_paper_2018_web-1.png" width="195"
-                                height="248" class="img-responsive" alt=""></div>
+                                height="248" class="img-responsive center-block" alt=""></div>
                         <div class="col-md-8 col-xs-12">
                             <h3><em>LETRS</em> whitepaper heading</h3>
-                            <p>Lorem enibh modipsu essit utatum, consequam nulput im. Ese elis fermentum molestie nullam modionsed eugiat mincidunt inciduipit.</p>
-                            <button type="button" class="btn btn-success btn-lg margin-top-30 margin-bottom-30">Call To Action</button>
+                            <p>Lorem enibh modipsu essit utatum, consequam nulput im. Ese elis fermentum molestie
+                                nullam modionsed eugiat mincidunt inciduipit.</p>
+                            <button type="button" class="btn btn-success btn-lg">Call To
+                                Action</button>
                         </div>
                     </div>
+                    <hr>
                     <h3><em>LETRS:</em></h3>
                     <ul>
                         <li>Provides educators with an in-depth understanding of the science behind teaching literacy</li>
@@ -135,16 +140,28 @@
                 <hr class="eff-inno-flex">
 
                 <div class="eff-inno-flex">
-                    <h3>
+                    <script src="https://fast.wistia.com/embed/medias/4e43y9xzht.jsonp" async></script>
+                    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+                    <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+                        <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                            <div class="wistia_embed wistia_async_4e43y9xzht seo=false videoFoam=true" style="height:100%;position:relative;width:100%">
+                                <div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img
+                                        src="https://fast.wistia.com/embed/medias/4e43y9xzht/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;"
+                                        alt="" onload="this.parentNode.style.opacity=1;" /></div>
+                            </div>
+                        </div>
+                    </div>
+                    <h3 class="letrs-video">
                         <em>LETRS</em>, the only literacy and language course of study backed by more than 30 years of
                         evidence-based scientific research, and more than a decade of proven success.
                     </h3>
-                    <script src="https://fast.wistia.com/embed/medias/cp50xqktct.jsonp" async></script>
-                    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
-                    <img src="http://via.placeholder.com/600x350?text=video+placeholder" class="img-responsive" alt="">
-                    <!-- <span class="wistia_embed wistia_async_cp50xqktct popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:338px;width:600px">&nbsp;</span> -->
                 </div>
-
+                <div class="quote-container left-border">
+                    <p>Lorem enibh modipsu essit utatum, consequam nulput im. Ese elis fermentum molestie nullam modionsed eugiat mincidunt inciduipit. Secte adignim enississe sem varius dolendit tortor, iscipit vulputat laore, nulputpatum adiatet blamet vestibulum.</p>
+                </div>
+                <div class="quote-container right-border">
+                    <p>Lorem enibh modipsu essit utatum, consequam nulput im. Ese elis fermentum molestie nullam modionsed eugiat mincidunt inciduipit. Secte adignim enississe sem varius dolendit tortor, iscipit vulputat laore, nulputpatum adiatet blamet vestibulum.</p>
+                </div>
             </div>
             <div class="col-md-5 right-col">
                 <div class="row">
