--- a/index.html
+++ b/index.html
@@ -157,10 +157,18 @@
                     </h3>
                 </div>
                 <div class="quote-container left-border">
-                    <p>Lorem enibh modipsu essit utatum, consequam nulput im. Ese elis fermentum molestie nullam modionsed eugiat mincidunt inciduipit. Secte adignim enississe sem varius dolendit tortor, iscipit vulputat laore, nulputpatum adiatet blamet vestibulum.</p>
+                    <p>&ldquo;Going through <em>LETRS</em>, you sit there, moment-by-moment, thinking, ‘I should
+                        have known this&rsquo;. It’s the tool to change lives and change communities.&rdquo;</p>
+                        <p>—Ebony Lee, Ph.D.<br>
+                            Director of Curriculum, Instruction, and Assessment<br>
+                            Clayton County Public Schools, Georgia</p>
                 </div>
                 <div class="quote-container right-border">
-                    <p>Lorem enibh modipsu essit utatum, consequam nulput im. Ese elis fermentum molestie nullam modionsed eugiat mincidunt inciduipit. Secte adignim enississe sem varius dolendit tortor, iscipit vulputat laore, nulputpatum adiatet blamet vestibulum.</p>
+                    <img src="img/louisa_moats.jpg" class="img-circle pull-left quote-img-left" width="100" alt="Dr. Louisa C. Moats">
+                    <p>&ldquo;Informed teachers are our best insurance against reading
+                        failure. While programs are very helpful tools, programs
+                        don’t teach, teachers do.&rdquo;</p>
+                        <p>—Dr. Louisa C. Moats</p>
                 </div>
             </div>
             <div class="col-md-5 right-col">
