Change stylesheet name to prevent caching issues with client review

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700" rel="stylesheet">
 
@@ -159,7 +159,7 @@
                 <div class="quote-container left-border">
                     <p>&ldquo;Going through <em>LETRS</em>, you sit there, moment-by-moment, thinking, ‘I should
                         have known this&rsquo;. It’s the tool to change lives and change communities.&rdquo;</p>
-                        <p>—Ebony Lee, Ph.D.<br>
+                        <p class="quote-author">—Ebony Lee, Ph.D.<br>
                             Director of Curriculum, Instruction, and Assessment<br>
                             Clayton County Public Schools, Georgia</p>
                 </div>
@@ -168,7 +168,7 @@
                     <p>&ldquo;Informed teachers are our best insurance against reading
                         failure. While programs are very helpful tools, programs
                         don’t teach, teachers do.&rdquo;</p>
-                        <p>—Dr. Louisa C. Moats</p>
+                        <p class="quote-author">—Dr. Louisa C. Moats</p>
                 </div>
             </div>
             <div class="col-md-5 right-col">
