Add latest revisions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/styles2.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700" rel="stylesheet">
 
@@ -100,7 +100,7 @@
         <div class="row">
             <div pardot-region="left-top" class="col-md-7" id="col-main">
                 <div class="eff-inno-flex">
-                    <h2>Proven professional development for<br>teachers of language and literacy</h2>
+                    <h2 class="main-heading">Proven professional development for<br>teachers of language and literacy</h2>
                     <p>Research shows 95% of all first graders can be taught how to read. The harsh reality is that
                         approximately 31% of fourth graders cannot read at even “basic” levels. Of those who cannot,
                         most won’t read without proper instruction. </p>
@@ -118,8 +118,10 @@
                                 height="248" class="img-responsive center-block" alt=""></div>
                         <div class="col-md-8 col-xs-12">
                             <h3><em>LETRS</em> whitepaper heading</h3>
-                            <p>Lorem enibh modipsu essit utatum, consequam nulput im. Ese elis fermentum molestie
-                                nullam modionsed eugiat mincidunt inciduipit.</p>
+                            <p>This guide focuses on the need for professional development
+                                    that fills gaps in teacher preparation and translates the
+                                    extensive body of research about language and literacy
+                                    development into effective classroom practice. </p>
                             <button type="button" class="btn btn-success btn-lg">Call To
                                 Action</button>
                         </div>
