--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
                     <hr>
 
                     <div class="row">
-                        <div class="col-md-4 col-xs-12"><img src="img/letrs_white_paper_2018_web-1.png" width="195"
-                                height="248" class="img-responsive center-block" alt=""></div>
+                        <div class="col-md-4 col-xs-12"><a href="https://go.voyagersopris.com/letrs-edweek-wp" target="_blank"><img src="img/letrs_white_paper_2018_web-1.png" width="195"
+                                height="248" class="img-responsive center-block" alt=""></a></div>
                         <div class="col-md-8 col-xs-12">
                             <h3><em>LETRS</em> whitepaper heading</h3>
                             <p>This guide focuses on the need for professional development
                                     that fills gaps in teacher preparation and translates the
                                     extensive body of research about language and literacy
                                     development into effective classroom practice. </p>
-                            <button type="button" class="btn btn-success btn-lg">Call To
-                                Action</button>
+
+                            <a href="https://go.voyagersopris.com/letrs-edweek-wp" target="_blank" class="btn btn-success btn-lg margin-top-20" role="button">Download PDF</a>
                         </div>
                     </div>
                     <hr>
