Add latest edits. Separate page into layout template and content sections for loading into Pardot

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/styles2.css" rel="stylesheet">
+    <link href="https://go.voyagersopris.com/l/207592/2019-01-13/883yg/207592/86021/styles.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700" rel="stylesheet">
 
@@ -37,27 +37,7 @@
 	</script> -->
 
 
-    <style>
-        .navbar-brand {
-            padding-top: 0px;
-        }
 
-        .vidwrap {
-            border: solid 3px #f1b61a;
-        }
-
-        .vidwrap h2 {
-            text-transform: none;
-            font-size: 24px;
-            margin-bottom: 25px;
-            font-weight: 400;
-        }
-
-        .overview p {
-            font-size: 18px;
-            padding: 0px 10%;
-        }
-    </style>
 
 </head>
 
@@ -88,7 +68,7 @@
             <div class="orange-arrow"></div>
         </div>
         <div class="col-md-4 col-xs-10">
-            <h2 class="subhead">You&rsquo;re Right.</h2>
+            <h2 class="subhead">You&rsquo;re&nbsp;Right</h2>
         </div>
         <div class="col-md-4 hidden-xs">
             <!-- Empty column to center above content. Hides on mobile. -->
@@ -117,7 +97,7 @@
                         <div class="col-md-4 col-xs-12"><a href="https://go.voyagersopris.com/letrs-edweek-wp" target="_blank"><img src="img/letrs_white_paper_2018_web-1.png" width="195"
                                 height="248" class="img-responsive center-block" alt=""></a></div>
                         <div class="col-md-8 col-xs-12">
-                            <h3><em>LETRS</em> whitepaper heading</h3>
+                            <h3 class="cta-heading"><em>LETRS</em> whitepaper heading</h3>
                             <p>This guide focuses on the need for professional development
                                     that fills gaps in teacher preparation and translates the
                                     extensive body of research about language and literacy
@@ -166,7 +146,7 @@
                             Clayton County Public Schools, Georgia</p>
                 </div>
                 <div class="quote-container right-border">
-                    <img src="img/louisa_moats.jpg" class="img-circle pull-left quote-img-left" width="100" alt="Dr. Louisa C. Moats">
+                    <img src="https://go.voyagersopris.com/l/207592/2019-01-13/883y8/207592/86015/louisa_moats.jpg" class="img-circle pull-left quote-img-left" width="100" alt="Dr. Louisa C. Moats">
                     <p>&ldquo;Informed teachers are our best insurance against reading
                         failure. While programs are very helpful tools, programs
                         don’t teach, teachers do.&rdquo;</p>
